...
                    Button(
                        onClick = {
                            navController.navigate("catalogo") { launchSingleTop = true }
                        },
                        modifier = Modifier.weight(1f)
                    ) {
                        Text("Catálogo")
                    }

                    Button(
                        onClick = {
                            navController.navigate("mis_prestamos") { launchSingleTop = true }
                        },
...
